ANTLR/TSQL/csharp/GParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from G.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace SQLParser.Parsers.TSql {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class GParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SELECT=1, FROM=2, AS=3, DISTINCT=4, WHERE=5, GROUP=6, BY=7, ORDER=8, HAVING=9, 
		LIMIT=10, OR=11, AND=12, IN=13, NOT=14, BETWEEN=15, LIKE=16, IS=17, NULL=18, 
		TRUE=19, FALSE=20, ASC=21, DESC=22, CASE=23, WHEN=24, THEN=25, ELSE=26, 
		END=27, JOIN=28, CROSS=29, OUTER=30, INNER=31, LEFT=32, RIGHT=33, FULL=34, 
		ON=35, CAST=36, UNION=37, EQ=38, NSEQ=39, NEQ=40, NEQJ=41, LT=42, LTE=43, 
		GT=44, GTE=45, PLUS=46, MINUS=47, ASTERISK=48, SLASH=49, PERCENT=50, QUESTION=51, 
		CONCAT=52, COMMA=53, LPAREN=54, RPAREN=55, DOT=56, STRING=57, BIGINT_LITERAL=58, 
		SMALLINT_LITERAL=59, TINYINT_LITERAL=60, BYTELENGTH_LITERAL=61, INTEGER_VALUE=62, 
		DECIMAL_VALUE=63, SCIENTIFIC_DECIMAL_VALUE=64, DOUBLE_LITERAL=65, IDENTIFIER=66, 
		BACKQUOTED_IDENTIFIER=67, SIMPLE_COMMENT=68, BRACKETED_COMMENT=69, WS=70, 
		UNRECOGNIZED=71, EXPONENT=72, DIGIT=73, LETTER=74;
	public const int
		RULE_singleExpression = 0, RULE_query = 1, RULE_queryNoWith = 2, RULE_queryOrganization = 3, 
		RULE_queryTerm = 4, RULE_queryPrimary = 5, RULE_sortSet = 6, RULE_sortItem = 7, 
		RULE_querySpecification = 8, RULE_fromClause = 9, RULE_whereClause = 10, 
		RULE_groupByClause = 11, RULE_havingClause = 12, RULE_aggregation = 13, 
		RULE_setQuantifier = 14, RULE_relation = 15, RULE_joinType = 16, RULE_joinCriteria = 17, 
		RULE_relationPrimary = 18, RULE_tableIdentifier = 19, RULE_namedExpression = 20, 
		RULE_namedExpressionSeq = 21, RULE_expression = 22, RULE_booleanExpression = 23, 
		RULE_predicated = 24, RULE_predicate = 25, RULE_valueExpression = 26, 
		RULE_primaryExpression = 27, RULE_constant = 28, RULE_comparisonOperator = 29, 
		RULE_booleanValue = 30, RULE_dataType = 31, RULE_whenClause = 32, RULE_qualifiedName = 33, 
		RULE_identifier = 34, RULE_strictIdentifier = 35, RULE_quotedIdentifier = 36, 
		RULE_number = 37, RULE_nonReserved = 38;
	public static readonly string[] ruleNames = {
		"singleExpression", "query", "queryNoWith", "queryOrganization", "queryTerm", 
		"queryPrimary", "sortSet", "sortItem", "querySpecification", "fromClause", 
		"whereClause", "groupByClause", "havingClause", "aggregation", "setQuantifier", 
		"relation", "joinType", "joinCriteria", "relationPrimary", "tableIdentifier", 
		"namedExpression", "namedExpressionSeq", "expression", "booleanExpression", 
		"predicated", "predicate", "valueExpression", "primaryExpression", "constant", 
		"comparisonOperator", "booleanValue", "dataType", "whenClause", "qualifiedName", 
		"identifier", "strictIdentifier", "quotedIdentifier", "number", "nonReserved"
	};

	private static readonly string[] _LiteralNames = {
		null, "'SELECT'", "'FROM'", "'AS'", "'DISTINCT'", "'WHERE'", "'GROUP'", 
		"'BY'", "'ORDER'", "'HAVING'", "'LIMIT'", "'OR'", "'AND'", "'IN'", "'NOT'", 
		"'BETWEEN'", "'LIKE'", "'IS'", "'NULL'", "'TRUE'", "'FALSE'", "'ASC'", 
		"'DESC'", "'CASE'", "'WHEN'", "'THEN'", "'ELSE'", "'END'", "'JOIN'", "'CROSS'", 
		"'OUTER'", "'INNER'", "'LEFT'", "'RIGHT'", "'FULL'", "'ON'", "'CAST'", 
		"'UNION'", "'='", "'<=>'", "'<>'", "'!='", "'<'", "'<='", "'>'", "'>='", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "'?'", "'||'", "','", "'('", "')'", 
		"'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SELECT", "FROM", "AS", "DISTINCT", "WHERE", "GROUP", "BY", "ORDER", 
		"HAVING", "LIMIT", "OR", "AND", "IN", "NOT", "BETWEEN", "LIKE", "IS", 
		"NULL", "TRUE", "FALSE", "ASC", "DESC", "CASE", "WHEN", "THEN", "ELSE", 
		"END", "JOIN", "CROSS", "OUTER", "INNER", "LEFT", "RIGHT", "FULL", "ON", 
		"CAST", "UNION", "EQ", "NSEQ", "NEQ", "NEQJ", "LT", "LTE", "GT", "GTE", 
		"PLUS", "MINUS", "ASTERISK", "SLASH", "PERCENT", "QUESTION", "CONCAT", 
		"COMMA", "LPAREN", "RPAREN", "DOT", "STRING", "BIGINT_LITERAL", "SMALLINT_LITERAL", 
		"TINYINT_LITERAL", "BYTELENGTH_LITERAL", "INTEGER_VALUE", "DECIMAL_VALUE", 
		"SCIENTIFIC_DECIMAL_VALUE", "DOUBLE_LITERAL", "IDENTIFIER", "BACKQUOTED_IDENTIFIER", 
		"SIMPLE_COMMENT", "BRACKETED_COMMENT", "WS", "UNRECOGNIZED", "EXPONENT", 
		"DIGIT", "LETTER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "G.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class SingleExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public QueryContext query() {
			return GetRuleContext<QueryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(GParser.Eof, 0); }
		public SingleExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_singleExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGListener typedListener = listener as IGListener;
			if (typedListener != null) typedListener.EnterSingleExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGListener typedListener = listener as IGListener;
			if (typedListener != null) typedListener.ExitSingleExpression(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGVisitor<TResult> typedVisitor = visitor as IGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSingleExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SingleExpressionContext singleExpression() {
		SingleExpressionContext _localctx = new SingleExpressionContext(Context, State);
		EnterRule(_localctx, 0, RULE_singleExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			query();
			State = 79;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QueryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public QueryNoWithContext queryNoWith() {
			return GetRuleContext<QueryNoWithContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public QueryOrganizationContext queryOrganization() {
			return GetRuleContext<QueryOrganizationContext>(0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_query; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGListener typedListener = listener as IGListener;
			if (typedListener != null) typedListener.EnterQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGListener typedListener = listener as IGListener;
			if (typedListener != null) typedListener.ExitQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGVisitor<TResult> typedVisitor = visitor as IGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryContext query() {
		QueryContext _localctx = new QueryContext(Context, State);
		EnterRule(_localctx, 2, RULE_query);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81;
			queryNoWith();
			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ORDER || _la==LIMIT) {
				{
				State = 82;
				queryOrganization();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QueryNoWithContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public QueryTermContext[] queryTerm() {
			return GetRuleContexts<QueryTermContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public QueryTermContext queryTerm(int i) {
			return GetRuleContext<QueryTermContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] UNION() { return GetTokens(GParser.UNION); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UNION(int i) {
			return GetToken(GParser.UNION, i);
		}
		public QueryNoWithContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_queryNoWith; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGListener typedListener = listener as IGListener;
			if (typedListener != null) typedListener.EnterQueryNoWith(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGListener typedListener = listener as IGListener;
			if (typedListener != null) typedListener.ExitQueryNoWith(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGVisitor<TResult> typedVisitor = visitor as IGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQueryNoWith(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryNoWithContext queryNoWith() {
		QueryNoWithContext _localctx = new QueryNoWithContext(Context, State);
		EnterRule(_localctx, 4, RULE_queryNoWith);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85;
			queryTerm(0);
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==UNION) {
				{
				{
				State = 86;
				Match(UNION);
				State = 87;
				queryTerm(0);
				}
				}
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QueryOrganizationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ORDER() { return GetToken(GParser.ORDER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BY() { return GetToken(GParser.BY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public SortSetContext sortSet() {
			return GetRuleContext<SortSetContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LIMIT() { return GetToken(GParser.LIMIT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTEGER_VALUE() { return GetToken(GParser.INTEGER_VALUE, 0); }
		public QueryOrganizationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_queryOrganization; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGListener typedListener = listener as IGListener;
			if (typedListener != null) typedListener.EnterQueryOrganization(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGListener typedListener = listener as IGListener;
			if (typedListener != null) typedListener.ExitQueryOrganization(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGVisitor<TResult> typedVisitor = visitor as IGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQueryOrganization(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryOrganizationContext queryOrganization() {
		QueryOrganizationContext _localctx = new QueryOrganizationContext(Context, State);
		EnterRule(_localctx, 6, RULE_queryOrganization);
		try {
			State = 98;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ORDER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 93;
				Match(ORDER);
				State = 94;
				Match(BY);
				State = 95;
				sortSet();
				}
				break;
			case LIMIT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 96;
				Match(LIMIT);
				State = 97;
				Match(INTEGER_VALUE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QueryTermContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public QueryPrimaryContext queryPrimary() {
			return GetRuleContext<QueryPrimaryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public QueryTermContext queryTerm() {
			return GetRuleContext<QueryTermContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UNION() { return GetToken(GParser.UNION, 0); }
		public QueryTermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_queryTerm; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGListener typedListener = listener as IGListener;
			if (typedListener != null) typedListener.EnterQueryTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGListener typedListener = listener as IGListener;
			if (typedListener != null) typedListener.ExitQueryTerm(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGVisitor<TResult> typedVisitor = visitor as IGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQueryTerm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryTermContext queryTerm() {
		return queryTerm(0);
	}

	private QueryTermContext queryTerm(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		QueryTermContext _localctx = new QueryTermContext(Context, _parentState);
		QueryTermContext _prevctx = _localctx;
		int _startState = 8;
		EnterRecursionRule(_localctx, 8, RULE_queryTerm, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 101;
			queryPrimary();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 108;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new QueryTermContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_queryTerm);
					State = 103;
					if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
					State = 104;
					Match(UNION);
					State = 105;
					queryPrimary();
					}
					} 
				}
				State = 110;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class QueryPrimaryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public QuerySpecificationContext querySpecification() {
			return GetRuleContext<QuerySpecificationContext>(0);
		}
		public QueryPrimaryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_queryPrimary; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGListener typedListener = listener as IGListener;
			if (typedListener != null) typedListener.EnterQueryPrimary(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGListener typedListener = listener as IGListener;
			if (typedListener != null) typedListener.ExitQueryPrimary(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGVisitor<TResult> typedVisitor = visitor as IGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQueryPrimary(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryPrimaryContext queryPrimary() {
		QueryPrimaryContext _localctx = new QueryPrimaryContext(Context, State);
		EnterRule(_localctx, 10, RULE_queryPrimary);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			querySpecification();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SortSetContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SortItemContext[] sortItem() {
			return GetRuleContexts<SortItemContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SortItemContext sortItem(int i) {
			return GetRuleContext<SortItemContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(GParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(GParser.COMMA, i);
		}
		public SortSetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sortSet; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGListener typedListener = listener as IGListener;
			if (typedListener != null) typedListener.EnterSortSet(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGListener typedListener = listener as IGListener;
			if (typedListener != null) typedListener.ExitSortSet(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGVisitor<TResult> typedVisitor = visitor as IGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSortSet(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SortSetContext sortSet() {
		SortSetContext _localctx = new SortSetContext(Context, State);
		EnterRule(_localctx, 12, RULE_sortSet);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 113;
			sortItem();
			State = 118;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 114;
					Match(COMMA);
					State = 115;
					sortItem();
					}
					} 
				}
				State = 120;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SortItemContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASC() { return GetToken(GParser.ASC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DESC() { return GetToken(GParser.DESC, 0); }
		public SortItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sortItem; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGListener typedListener = listener as IGListener;
			if (typedListener != null) typedListener.EnterSortItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGListener typedListener = listener as IGListener;
			if (typedListener != null) typedListener.ExitSortItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGVisitor<TResult> typedVisitor = visitor as IGVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSortItem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SortItemContext sortItem() {
		SortItemContext _localctx = new SortItemContext(Context, State);
		EnterRule(_localctx, 14, RULE_sortItem);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			expression();
			State = 123;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				{
				State = 122;
				_la = TokenStream.LA(1);
				if ( !(_la==ASC || _la==DESC) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
